# src/swagger/endpoints.ts
@@ -18,12 +18,34 @@ const listingsController = new ListingsController(
 
 
 //events
-router.get("/events/read", eventsController.readRequest.bind(eventsController));
-router.get("/events/collection/:agent", eventsController.collectionRequest.bind(eventsController));
-router.get("/events/resource/:id", eventsController.readRequest.bind(eventsController));
-router.post("/events/insert", eventsController.insertRequest.bind(eventsController));
-router.delete("/events/delete/:col/:identifier", eventsController.deleteRequest.bind(eventsController));
+// #swagger.tags 
+router.get("/events/read", 
+    // #swagger.tags = ['Events']
+    eventsController.readRequest.bind(eventsController)
+);
+router.get("/events/collection/:agent", 
+    // #swagger.tags = ['Events']
+    eventsController.collectionRequest.bind(eventsController)
+);
+router.get("/events/resource/:id", 
+    // #swagger.tags = ['Events']
+    eventsController.readRequest.bind(eventsController)
+);
+router.post("/events/insert", 
+    // #swagger.tags = ['Events']
+    eventsController.insertRequest.bind(eventsController)
+);
+router.delete("/events/delete/:col/:identifier", 
+    // #swagger.tags = ['Events']
+    eventsController.deleteRequest.bind(eventsController)
+);
     
 //listings
-router.get("/listings/read", listingsController.readRequest.bind(listingsController));
-router.get("/listings/resource/:id", listingsController.rescourceRequest.bind(listingsController));
+router.get("/listings/read", 
+    // #swagger.tags = ['Listings']
+    listingsController.readRequest.bind(listingsController)
+);
+router.get("/listings/resource/:id", 
+    // #swagger.tags = ['Listings']
+    listingsController.rescourceRequest.bind(listingsController)
+);
