# src/swagger/swagger.json
@@ -13,6 +13,9 @@
   "paths": {
     "/events/read": {
       "get": {
+        "tags": [
+          "Events"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -26,6 +29,9 @@
     },
     "/events/collection/{agent}": {
       "get": {
+        "tags": [
+          "Events"
+        ],
         "description": "",
         "parameters": [
           {
@@ -50,6 +56,9 @@
     },
     "/events/resource/{id}": {
       "get": {
+        "tags": [
+          "Events"
+        ],
         "description": "",
         "parameters": [
           {
@@ -71,6 +80,9 @@
     },
     "/events/insert": {
       "post": {
+        "tags": [
+          "Events"
+        ],
         "description": "",
         "parameters": [
           {
@@ -110,6 +122,9 @@
     },
     "/events/delete/{col}/{identifier}": {
       "delete": {
+        "tags": [
+          "Events"
+        ],
         "description": "",
         "parameters": [
           {
@@ -140,6 +155,9 @@
     },
     "/listings/read": {
       "get": {
+        "tags": [
+          "Listings"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -153,6 +171,9 @@
     },
     "/listings/resource/{id}": {
       "get": {
+        "tags": [
+          "Listings"
+        ],
         "description": "",
         "parameters": [
           {
